packages/modal/src/css/modal.css
@import "tailwindcss";

@theme {
    /* Modal */
    --modal-position: fixed;
    --modal-display: flex;
    --modal-justify-content: center;
    --modal-align-items: center;
    --modal-visibility: hidden;
    --modal-top: 0;
    --modal-left: 0;
    --modal-width: 100%;
    --modal-height: 100%;
    --modal-padding: 1rem;
    --modal-z-index: 1000;

    --modal-show-visibility: visible;
    --modal-show-transition: transform .3s ease-out, opacity .3s ease-out;
    --modal-show-transform: translate(1, calc(-100% - 50px));

    --modal-max-width: 100%;    
    
    /* Modal Backdrop */
    --modal-backdrop-position: absolute;
    --modal-backdrop-top: 0;
    --modal-backdrop-left: 0;
    --modal-backdrop-z-index: 1;
    --modal-backdrop-width: 100%;
    --modal-backdrop-height: 100%;
    --modal-backdrop-background-color: color-mix(in oklch, var(--color-neutral-950, oklch(55.3% 0.013 58.071)) 75%, transparent);
    --modal-backdrop-dark-background-color: color-mix(in oklch, var(--color-neutral-950, oklch(26.8% 0.007 34.298)) 75%, transparent);

    /* Modal Container */
    --modal-container-position: relative;
    --modal-container-display: flex;
    --modal-container-flex-direction: column;
    --modal-container-z-index: 2;
    --modal-container-width: 100%;
    --modal-container-max-width: var(--modal-size-md);
    --modal-container-max-height: 100vh;
    --modal-container-align-items: center;
    --modal-container-justify-content: center;
    --modal-container-box-shadow: var(--shadow-lg, 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1));

    /* Modal Close Button */
    --modal-close-button-position: absolute;
    --modal-close-button-cursor: pointer;
    --modal-close-button-top: 0.75rem;
    --modal-close-button-right: 0.75rem;
    --modal-close-button-color: var(--color-neutral-500, oklch(55.3% 0.013 58.071));
    --modal-close-button-hover-color: var(--color-neutral-600, oklch(44.4% 0.011 73.639));
    --modal-close-button-active-color: var(--color-neutral-700, oklch(37.4% 0.01 67.558));

    /* Modal Header */
    --modal-header-max-height: calc(100vh - (var(--btn-font-size) + var(--btn-padding-y) * 2) - 3rem);
    --modal-header-width: 100%;
    --modal-header-border-top-left-radius: 0.5rem;
    --modal-header-border-top-right-radius: 0.5rem;
    --modal-header-padding: 0.75rem 1rem; /* padding: top/bottom left/right */
    --modal-header-background-color: var(--color-white, oklch(100% 0.00011 271.152));
    --modal-header-color: var(--color-neutral-900, oklch(21.6% 0.006 56.043));
    --modal-header-dark-background-color: var(--color-neutral-800, oklch(26.8% 0.007 34.298));
    --modal-header-dark-color: var(--color-neutral-100, oklch(97% 0.001 106.424));
    --modal-header-display: flex;
    --modal-header-flex-direction: column;
    --modal-header-resize-flex-direction: row;

    /* Modal Header Icon */
    --modal-header-icon-margin-inline: auto;
    --modal-header-icon-display: flex;
    --modal-header-icon-height: 3rem;
    --modal-header-icon-width: 3rem;
    --modal-header-icon-align-items: center;
    --modal-header-icon-justify-content: center;
    --modal-header-icon-border-radius: 100%;
    --modal-header-icon-background-color: var(--color-blue-100, oklch(93.2% 0.032 255.585));
    --modal-header-icon-color: var(--color-blue-800, oklch(42.4% 0.199 265.638));
    --modal-header-icon-min-width-margin-right: 1rem;
    --modal-header-icon-min-width-height: 2.5rem;
    --modal-header-icon-min-width-width: 2.5rem;

    /* Modal Header Text */
    --modal-header-text-display: flex;
    --modal-header-text-flex-direction: column;
    --modal-header-text-height: 0px;
    --modal-header-text-margin-top: 0.75rem;
    --modal-header-text-text-align: center;
    --modal-header-text-flex: 1;
    --modal-header-text-resize-height: auto;
    --modal-header-text-resize-margin-top: 0rem;
    --modal-header-text-resize-text-align: left;
    
    /* Modal Title */
    --modal-title-font-weight: 600;
    --modal-title-padding-x: 0.25rem;
    --modal-title-font-size: var(--modal-font-size-md, --spacing(4));

    /* Modal Body */
    --modal-body-max-height: calc(var(--modal-container-max-width) / 2);
    --modal-body-height: 100%;
    --modal-body-overflow-y: auto;
    --modal-body-margin-top: 0.5rem;
    --modal-body-padding-x: 0.25rem;
    --modal-body-padding-bottom: 0.25rem;
    --modal-body-font-size: var(--modal-font-size-md, --spacing(4));

    /* Modal Footer */
    --modal-footer-width: 100%;
    --modal-footer-padding: 0.75rem 1rem;
    --modal-footer-background-color: var(--color-neutral-50, oklch(98.5% 0.001 106.423));
    --modal-footer-dark-background-color: var(--color-neutral-900, oklch(21.6% 0.006 56.043));
    --modal-footer-display: flex;
    --modal-footer-gap: 0.5rem;
    --modal-footer-border-bottom-left-radius: 0.5rem;
    --modal-footer-border-bottom-right-radius: 0.5rem;
    --modal-footer-flex-direction: row;
    --modal-footer-btn-flex: 1;
    --modal-footer-justify-content: flex-end;
    --modal-footer-min-width-btn-flex: 0 0 auto;

    /* Modal Center */
    --modal-center-header-flex-direction: column;
    --modal-center-header-align-items: center;
    --modal-center-header-icon-margin-inline: auto;
    --modal-center-header-text-text-align: center;
    --modal-center-header-text-margin-top: 0.75rem;
    --modal-center-footer-flex-direction: row;
    --modal-center-footer-justify-content: center;
    --modal-center-footer-btn-flex: 1;
}
/* ... */

